# relationship-temperature

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  SECURITY.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vitest.config.mts
.impeccable/: design.json
app/: globals.css  layout.tsx  page.tsx  sitemap.ts
artifacts/: bilateral_relationships_2026_daily.csv  turning_points_report.md
components/: InfoPage.tsx  SiteHeader.tsx  TrendDashboard.tsx
config/: candidate-pool.json
doc/: prompt.md
docs/: README.md  index.html  styles.css
lib/: cache.ts  candidatePool.ts  chart.ts  homeSeo.ts  i18n.ts  latestData.ts  pairJsonLd.ts  pairSeo.ts  siteJsonLd.ts  types.ts
migrations/: 001_relationship_cache.sql  002_ai_enrichment.sql  003_gdelt_events_import.sql
project-docs/: high-level-design.md  launch-post.md  production-deployment-plan.md  proposal.md
public/: ads.txt  baidu_verify_codeva-h6TVEGWNXF.html  robots.txt
relationship_temperature/: __init__.py  ai.py  config.py  db.py  enrichment.py  gdelt_importer.py  loader.py  metadata.py  models.py  precompute.py  processing.py  scheduled_refresh.py
scripts/: analyze_turning_points.py  com.relationship-temperature.daily-refresh.plist  deploy_production.sh  install_daily_refresh_launchd.sh  plot_bilateral_relationships.py
tasks/: data-loading.md  data-processing.md  database-base.md  frontend-page.md  progress.md  service-api.md
test/: cache.test.ts  candidatePool.test.ts  chart.test.ts  (+6 more)
(+30 files in other folders)
