[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relationship-temperature"
version = "0.1.0"
description = "Relationship Temperature data pipeline for GDELT based bilateral trend analysis."
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary]>=3.2.3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.0",
  "pytest>=8.4.0",
  "ruff>=0.13.0",
]

[tool.setuptools.packages.find]
include = ["relationship_temperature*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
exclude = [
  "^scripts/",
]

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
